--- a/Image.ML.WPF/Image.ML.WPF.csproj
+++ b/Image.ML.WPF/Image.ML.WPF.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Image.ML.Model\Image.ML.Model.csproj" />
+  </ItemGroup>
+
 </Project>
